# ticker-analyzer-ai

./: .env.example  README.md  pyproject.toml  quality_check.sh  requirements.in  requirements.txt  setup.sh
src/: __init__.py  controller.py
src/agents/: news_agent.py  price_agent.py  recommendation_agent.py  sentiment_agent.py
src/utils/: validation.py
unit_tests/: README.md  __init__.py  conftest.py  controller_test.py
unit_tests/agents/: __init__.py  price_agent_test.py
unit_tests/utils/: validation_test.py
