[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticker-analyser"
version = "0.1.0"
description = "A multi-agent AI assistant for analyzing stock tickers using CrewAI"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["unit_tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 